logs/rovio/build.make.008.log.stderr
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp: In function ‘int main(int, char**)’:
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:302:42: error: assignment of member ‘geometry_msgs::Vector3_<std::allocator<void> >::x’ in read-only object
            imuMsg->linear_acceleration.x = acc[0];
                                          ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:303:35: error: assignment of member ‘geometry_msgs::Vector3_<std::allocator<void> >::y’ in read-only object
     imuMsg->linear_acceleration.y = acc[1];
                                   ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:304:35: error: assignment of member ‘geometry_msgs::Vector3_<std::allocator<void> >::z’ in read-only object
     imuMsg->linear_acceleration.z = acc[2];
                                   ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:305:32: error: assignment of member ‘geometry_msgs::Vector3_<std::allocator<void> >::x’ in read-only object
     imuMsg->angular_velocity.x = gyr[0];
                                ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:306:32: error: assignment of member ‘geometry_msgs::Vector3_<std::allocator<void> >::y’ in read-only object
     imuMsg->angular_velocity.y = gyr[1];
                                ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:307:32: error: assignment of member ‘geometry_msgs::Vector3_<std::allocator<void> >::z’ in read-only object
     imuMsg->angular_velocity.z = gyr[2];
                                ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:318:34: error: no matching function for call to ‘rovio::RovioNode<rovio::RovioFilter<rovio::FilterState<25u, 4, 6, 1, 0> > >::imgCallback0(cv::Mat&)’
   rovioNode.imgCallback0(filtered);
                                  ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:318:34: note: candidate is:
In file included from /home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:39:0:
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:457:8: note: void rovio::RovioNode<FILTER>::imgCallback0(const ImageConstPtr&) [with FILTER = rovio::RovioFilter<rovio::FilterState<25u, 4, 6, 1, 0> >; sensor_msgs::ImageConstPtr = boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >]
   void imgCallback0(const sensor_msgs::ImageConstPtr & img){
        ^
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:457:8: note:   no known conversion for argument 1 from ‘cv::Mat’ to ‘const ImageConstPtr& {aka const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&}’
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:321:35: error: no matching function for call to ‘rovio::RovioNode<rovio::RovioFilter<rovio::FilterState<25u, 4, 6, 1, 0> > >::imgCallback1(cv::Mat&)’
    rovioNode.imgCallback1(filtered);
                                   ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:321:35: note: candidate is:
In file included from /home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:39:0:
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:467:8: note: void rovio::RovioNode<FILTER>::imgCallback1(const ImageConstPtr&) [with FILTER = rovio::RovioFilter<rovio::FilterState<25u, 4, 6, 1, 0> >; sensor_msgs::ImageConstPtr = boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >]
   void imgCallback1(const sensor_msgs::ImageConstPtr & img) {
        ^
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:467:8: note:   no known conversion for argument 1 from ‘cv::Mat’ to ‘const ImageConstPtr& {aka const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&}’
make[2]: *** [CMakeFiles/rovio_rosbag_loader.dir/src/rovio_rosbag_loader.cpp.o] Error 1
make[1]: *** [CMakeFiles/rovio_rosbag_loader.dir/all] Error 2
make: *** [all] Error 2
